# rustytimer

./: Cargo.toml  Procfile  Rocket.toml  index.php
src/: clock.rs  form.rs  helper.rs  lib.rs  main.rs
static/: custom.css  helper.js  index.html  package.json  wasm.d.ts  wasm.js  wasm_bg.wasm  wasm_bg.wasm.d.ts
