[package]
name = "rustysugar"
version = "0.1.0"
authors = ["David Sugar <foobarc11@protonmail.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "0.17"
wasm-bindgen = "0.2.68"
rocket = "0.4.6"

[dependencies.rocket_contrib]
version = "0.4.6"
default-features = false
features = ["tera_templates", "serve"]
